--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -11,6 +11,7 @@
   <!--<link href="/styles/site.min.css" rel="stylesheet">-->
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" >-->
   <link rel="stylesheet" href="/libs/bootstrap-3.3.5/css/bootstrap.min.css" >
+	<link rel="stylesheet" href="/libs/font-awesome-4.4.0/css/font-awesome.min.css" >
   <link rel="stylesheet" href="/styles/default.css" >
   
   {{!-- This file provides the default styling for the KeystoneJS Content Editor
