--- a/templates/views/layouts/plans-layout.hbs
+++ b/templates/views/layouts/plans-layout.hbs
@@ -80,7 +80,7 @@
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
               </button>
-              <a href="/" class="navbar-brand">community Planner</a>
+              <a href="/" class="navbar-brand">Community Planner</a>
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-left">
