--- a/apache2_many_node_servers/templates/views/index.hbs
+++ b/apache2_many_node_servers/templates/views/index.hbs
@@ -14,6 +14,13 @@
 					Developed using the <a href="https://keystonejs.com" target="_cf">KeystoneJS</a> Content Management System and
 					<a href="https://www.mongodb.com" target="_cf">mongoDB</a> document store.
 				</p>
+				<p class="c-indigo">
+					<small>
+						Try login using the following credentials.<br>
+						E-mail: <span class="text-danger">test@community-planner.org</span><br>
+						Password: <span class="text-danger">test</span>
+					</small>
+				</p>
 				{{!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> --}}
 			</div>
 		</div>
